@@ -1,3 +1,7 @@
+2011-09-07  Guillaume Lazzara  <z@lrde.epita.fr>
+
+	* tests/estim/font_boldness.cc: Make the test deterministic.
+
 2011-09-06  Guillaume Lazzara  <z@lrde.epita.fr>
 
 	* tests/img/several_objects.pgm: Add a new test image.
